apps/traefik/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: traefik
spec:
  type: NodePort
  selector:
    app: traefik
  ports:
  - name: web
    protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30081
  - name: websecure
    protocol: TCP
    port: 443
    targetPort: 443
    nodePort: 30444
  - name: dashboard
    protocol: TCP
    port: 8080
    targetPort: 8080
