apps/traefik/base/dashboard-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints:
  - web
  - websecure
  routes:
  - match: Host(`traefik.fle.api54.de`) && PathPrefix(`/dashboard`)
    kind: Rule
    services:
    - name: traefik
      port: 8080
